crates/env-check-render/tests/snapshots/render__render_profile_strict.snap
---
source: crates/env-check-render/tests/render.rs
expression: render_markdown(&receipt_strict)
---
## env-check: FAIL

- Findings: 0 error, 1 warn, 0 info
- Profile: `strict`
- fail_on: `warn`
- Sources: `.tool-versions`

### Findings

- **warn** `env.version_mismatch` (.tool-versions) — Version mismatch
