crates/env-check-render/tests/snapshots/render__render_verdict_pass_simple.snap
---
source: crates/env-check-render/tests/render.rs
expression: md
---
## env-check: PASS

- Findings: 0 error, 0 warn, 1 info
- Profile: `strict`
- Sources: `.tool-versions`

### Findings

- **info** `env.info` (.tool-versions) — All tools verified
