crates/env-check-render/tests/snapshots/render__render_verdict_warn_simple.snap
---
source: crates/env-check-render/tests/render.rs
expression: md
---
## env-check: WARN

- Findings: 0 error, 1 warn, 0 info
- Profile: `oss`
- Sources: `.tool-versions`

### Findings

- **warn** `env.version_mismatch` (.tool-versions) — node version differs from expected
  - Run `asdf install node 20.0.0`
